Renamed every session

--- a/program/cohort.ipynb
+++ b/program/cohort.ipynb
@@ -31,7 +31,7 @@
    "id": "5ec22ac1",
    "metadata": {},
    "source": [
-    "## Chapter 1 - Introduction and Initial Setup\n",
+    "## Session 1 - Introduction and Initial Setup\n",
     "\n",
     "The machine learning system we'll build during this program will consist of three main pipelines: A training pipeline, a deployment pipeline, and a monitoring pipeline.\n",
     "\n",
@@ -234,7 +234,7 @@
    "id": "3a835695-557b-46d8-a901-a29bc57df5fe",
    "metadata": {},
    "source": [
-    "## Chapter 2 - Exploratory Data Analysis\n",
+    "## Session 2 - Exploratory Data Analysis\n",
     "\n",
     "Let's run Exploratory Data Analysis on the [Penguins dataset](https://www.kaggle.com/parulpandey/palmer-archipelago-antarctica-penguin-data). The goal of this section is to understand the data and the problem we are trying to solve.\n",
     "\n",
@@ -1140,7 +1140,7 @@
    "id": "11137928-6b4e-465c-8ad7-2297afbaa33c",
    "metadata": {},
    "source": [
-    "## Chapter 3 - Splitting and Transforming the Data\n",
+    "## Session 3 - Splitting and Transforming the Data\n",
     "\n",
     "In this section, we'll build a simple [SageMaker Pipeline](https://docs.aws.amazon.com/sagemaker/latest/dg/pipelines-sdk.html) with one step to split and transform the data:\n",
     "\n",
@@ -1725,8 +1725,8 @@
     "\n",
     "from sagemaker.workflow.pipeline import Pipeline\n",
     "\n",
-    "chapter3_pipeline = Pipeline(\n",
-    "    name=\"chapter3-pipeline\",\n",
+    "session3_pipeline = Pipeline(\n",
+    "    name=\"session3-pipeline\",\n",
     "    parameters=[dataset_location],\n",
     "    steps=[\n",
     "        preprocessing_step,\n",
@@ -1735,7 +1735,7 @@
     "    sagemaker_session=config[\"session\"],\n",
     ")\n",
     "\n",
-    "chapter3_pipeline.upsert(role_arn=role)"
+    "session3_pipeline.upsert(role_arn=role)"
    ]
   },
   {
@@ -1743,7 +1743,7 @@
    "id": "63c190c5-52b5-4ccc-8d42-847a694b8e66",
    "metadata": {},
    "source": [
-    "## Chapter 4 - Training the Model\n",
+    "## Session 4 - Training the Model\n",
     "\n",
     "This section extends the [SageMaker Pipeline](https://docs.aws.amazon.com/sagemaker/latest/dg/pipelines-sdk.html) with a [step to train a model](https://docs.aws.amazon.com/sagemaker/latest/dg/build-and-manage-steps.html#step-type-training). Check [Train a Model with TensorFlow](https://sagemaker.readthedocs.io/en/stable/frameworks/tensorflow/using_tf.html#train-a-model-with-tensorflow) for more information about training a model with TensorFlow.\n",
     "\n",
@@ -2338,8 +2338,8 @@
     "# | code: true\n",
     "# | output: false\n",
     "\n",
-    "chapter4_pipeline = Pipeline(\n",
-    "    name=\"chapter4-pipeline\",\n",
+    "session4_pipeline = Pipeline(\n",
+    "    name=\"session4-pipeline\",\n",
     "    parameters=[dataset_location],\n",
     "    steps=[\n",
     "        preprocessing_step,\n",
@@ -2349,7 +2349,7 @@
     "    sagemaker_session=config[\"session\"],\n",
     ")\n",
     "\n",
-    "chapter4_pipeline.upsert(role_arn=role)"
+    "session4_pipeline.upsert(role_arn=role)"
    ]
   },
   {
@@ -2357,7 +2357,7 @@
    "id": "23767878",
    "metadata": {},
    "source": [
-    "## Chapter 5 - Custom Training Container\n",
+    "## Session 5 - Custom Training Container\n",
     "\n",
     "In this section, we'll create a custom Docker image to train the model. This is useful when you need full control of the environment where the training script runs. For this example, we'll run the training script using [Keras 3](https://keras.io) with a [JAX](https://jax.readthedocs.io/en/latest/index.html) backend. Check [Adapting your own Docker container to work with SageMaker](https://docs.aws.amazon.com/sagemaker/latest/dg/docker-containers-adapt-your-own.html) for more information about using your own Docker containers."
    ]
@@ -6625,6 +6625,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e64ec7d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "{\n",
+    "    \"rules\": [\n",
+    "        {\n",
+    "            \"rulePriority\": 1,\n",
+    "            \"description\": \"Keep only one untagged image, expire all others\",\n",
+    "            \"selection\": {\n",
+    "                \"tagStatus\": \"untagged\",\n",
+    "                \"countType\": \"imageCountMoreThan\",\n",
+    "                \"countNumber\": 1\n",
+    "            },\n",
+    "            \"action\": {\n",
+    "                \"type\": \"expire\"\n",
+    "            }\n",
+    "        }\n",
+    "    ]\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "56232bec",
    "metadata": {},
@@ -6799,8 +6824,8 @@
     "# | code: true\n",
     "# | output: false\n",
     "\n",
-    "chapter5_pipeline = Pipeline(\n",
-    "    name=\"chapter5-pipeline\",\n",
+    "session5_pipeline = Pipeline(\n",
+    "    name=\"session5-pipeline\",\n",
     "    parameters=[dataset_location],\n",
     "    steps=[\n",
     "        preprocessing_step,\n",
@@ -6810,7 +6835,7 @@
     "    sagemaker_session=config[\"session\"],\n",
     ")\n",
     "\n",
-    "chapter5_pipeline.upsert(role_arn=role)"
+    "session5_pipeline.upsert(role_arn=role)"
    ]
   },
   {
@@ -6818,7 +6843,7 @@
    "id": "9ef68a77",
    "metadata": {},
    "source": [
-    "## Chapter 6 - Tuning the Model\n",
+    "## Session 6 - Tuning the Model\n",
     "\n",
     "This section extends the [SageMaker Pipeline](https://docs.aws.amazon.com/sagemaker/latest/dg/pipelines-sdk.html) with a [step to tune the model](https://docs.aws.amazon.com/sagemaker/latest/dg/build-and-manage-steps.html#step-type-tuning).\n",
     "\n",
@@ -6996,8 +7021,8 @@
     "# | code: true\n",
     "# | output: false\n",
     "\n",
-    "chapter6_pipeline = Pipeline(\n",
-    "    name=\"chapter6-pipeline\",\n",
+    "session6_pipeline = Pipeline(\n",
+    "    name=\"session6-pipeline\",\n",
     "    parameters=[dataset_location],\n",
     "    steps=[\n",
     "        preprocessing_step,\n",
@@ -7007,7 +7032,7 @@
     "    sagemaker_session=config[\"session\"],\n",
     ")\n",
     "\n",
-    "chapter6_pipeline.upsert(role_arn=role)"
+    "session6_pipeline.upsert(role_arn=role)"
    ]
   },
   {
@@ -7015,7 +7040,7 @@
    "id": "21d40fe8-ba74-4c12-9555-d8ea33d1c8b4",
    "metadata": {},
    "source": [
-    "## Chapter 7 - Evaluating the Model\n",
+    "## Session 7 - Evaluating the Model\n",
     "\n",
     "This section extends the [SageMaker Pipeline](https://docs.aws.amazon.com/sagemaker/latest/dg/pipelines-sdk.html) with a step to evaluate the model.\n",
     "\n",
@@ -7518,8 +7543,8 @@
     "# | code: true\n",
     "# | output: false\n",
     "\n",
-    "chapter7_pipeline = Pipeline(\n",
-    "    name=\"chapter7-pipeline\",\n",
+    "session7_pipeline = Pipeline(\n",
+    "    name=\"session7-pipeline\",\n",
     "    parameters=[dataset_location],\n",
     "    steps=[\n",
     "        preprocessing_step,\n",
@@ -7530,7 +7555,7 @@
     "    sagemaker_session=config[\"session\"],\n",
     ")\n",
     "\n",
-    "chapter7_pipeline.upsert(role_arn=role)"
+    "session7_pipeline.upsert(role_arn=role)"
    ]
   },
   {
@@ -7538,7 +7563,7 @@
    "id": "031af83a",
    "metadata": {},
    "source": [
-    "## Chapter 8 - Registering the Model\n",
+    "## Session 8 - Registering the Model\n",
     "\n",
     "This section extends the [SageMaker Pipeline](https://docs.aws.amazon.com/sagemaker/latest/dg/pipelines-sdk.html) with a step to [register the model](https://docs.aws.amazon.com/sagemaker/latest/dg/model-registry-version.html). We'll use a [Model Step](https://docs.aws.amazon.com/sagemaker/latest/dg/build-and-manage-steps.html#step-type-model) to register the model in the [SageMaker Model Registry](https://docs.aws.amazon.com/sagemaker/latest/dg/model-registry.html).\n",
     "\n",
@@ -7735,8 +7760,8 @@
     "# | code: true\n",
     "# | output: false\n",
     "\n",
-    "chapter8_pipeline = Pipeline(\n",
-    "    name=\"chapter8-pipeline\",\n",
+    "session8_pipeline = Pipeline(\n",
+    "    name=\"session8-pipeline\",\n",
     "    parameters=[dataset_location],\n",
     "    steps=[\n",
     "        preprocessing_step,\n",
@@ -7748,7 +7773,7 @@
     "    sagemaker_session=config[\"session\"],\n",
     ")\n",
     "\n",
-    "chapter8_pipeline.upsert(role_arn=role)"
+    "session8_pipeline.upsert(role_arn=role)"
    ]
   },
   {
@@ -7756,7 +7781,7 @@
    "id": "a3274db6",
    "metadata": {},
    "source": [
-    "## Chapter 9 - Conditional Registration\n",
+    "## Session 9 - Conditional Registration\n",
     "\n",
     "This section extends the [SageMaker Pipeline](https://docs.aws.amazon.com/sagemaker/latest/dg/pipelines-sdk.html) with a condition to register the model only if it's good enough. We'll use a [Condition Step](https://docs.aws.amazon.com/sagemaker/latest/dg/build-and-manage-steps.html#step-type-condition) to determine whether the model's accuracy is above a threshold.\n",
     "\n",
@@ -7935,8 +7960,8 @@
     "# | code: true\n",
     "# | output: false\n",
     "\n",
-    "chapter9_pipeline = Pipeline(\n",
-    "    name=\"chapter9-pipeline\",\n",
+    "session9_pipeline = Pipeline(\n",
+    "    name=\"session9-pipeline\",\n",
     "    parameters=[dataset_location, accuracy_threshold],\n",
     "    steps=[\n",
     "        preprocessing_step,\n",
@@ -7948,7 +7973,7 @@
     "    sagemaker_session=config[\"session\"],\n",
     ")\n",
     "\n",
-    "chapter9_pipeline.upsert(role_arn=role)"
+    "session9_pipeline.upsert(role_arn=role)"
    ]
   },
   {
@@ -7956,7 +7981,7 @@
    "id": "6176c6fd",
    "metadata": {},
    "source": [
-    "## Chapter 10 - Serving the Model\n",
+    "## Session 10 - Serving the Model\n",
     "\n",
     "In this section, we'll build a simple [Flask](https://flask.palletsprojects.com/) application to serve the model. You can use a similar approach to serve any model from behind an API endpoint. \n",
     "\n",
@@ -8230,7 +8255,7 @@
    "id": "49a05e63",
    "metadata": {},
    "source": [
-    "## Chapter 11 - Deploying the Model\n",
+    "## Session 11 - Deploying the Model\n",
     "\n",
     "In this section we'll deploy the model from the Model Registry to an endpoint. We'll do it manually, using [boto3](https://boto3.amazonaws.com/v1/documentation/api/latest/reference/services/sagemaker.html) and the SageMaker Python SDK. Check [Deploy to a SageMaker Endpoint](https://sagemaker.readthedocs.io/en/stable/frameworks/tensorflow/using_tf.html#deploy-to-a-sagemaker-endpoint) for more information about deploying a model to an endpoint.\n",
     "\n",
@@ -8404,7 +8429,7 @@
    "id": "23ab1884",
    "metadata": {},
    "source": [
-    "## Chapter 12 - Deploying From the Pipeline\n",
+    "## Session 12 - Deploying From the Pipeline\n",
     "\n",
     "In this section we'll extend the [SageMaker Pipeline](https://docs.aws.amazon.com/sagemaker/latest/dg/pipelines-sdk.html) with a step to automatically deploy the model to an endpoint. \n",
     "\n",
@@ -8868,8 +8893,8 @@
     "# | code: true\n",
     "# | output: false\n",
     "\n",
-    "chapter12_pipeline = Pipeline(\n",
-    "    name=\"chapter12-pipeline\",\n",
+    "session12_pipeline = Pipeline(\n",
+    "    name=\"session12-pipeline\",\n",
     "    parameters=[dataset_location, accuracy_threshold],\n",
     "    steps=[\n",
     "        preprocessing_step,\n",
@@ -8881,7 +8906,7 @@
     "    sagemaker_session=config[\"session\"],\n",
     ")\n",
     "\n",
-    "chapter12_pipeline.upsert(role_arn=role)"
+    "session12_pipeline.upsert(role_arn=role)"
    ]
   },
   {
@@ -8928,7 +8953,7 @@
    "id": "65c31653",
    "metadata": {},
    "source": [
-    "## Chapter 13 - Deploying From an Event\n",
+    "## Session 13 - Deploying From an Event\n",
     "\n",
     "In this section we'll modify the [SageMaker Pipeline](https://docs.aws.amazon.com/sagemaker/latest/dg/pipelines-sdk.html) to register the model with `PendingManualApproval` status and only deploy it whenever its status changes from to `Approved`.\n",
     "\n",
@@ -9202,8 +9227,8 @@
     "# | code: true\n",
     "# | output: false\n",
     "\n",
-    "chapter13_pipeline = Pipeline(\n",
-    "    name=\"chapter13-pipeline\",\n",
+    "session13_pipeline = Pipeline(\n",
+    "    name=\"session13-pipeline\",\n",
     "    parameters=[dataset_location, accuracy_threshold],\n",
     "    steps=[\n",
     "        preprocessing_step,\n",
@@ -9215,7 +9240,7 @@
     "    sagemaker_session=config[\"session\"],\n",
     ")\n",
     "\n",
-    "chapter13_pipeline.upsert(role_arn=role)"
+    "session13_pipeline.upsert(role_arn=role)"
    ]
   },
   {
@@ -9262,7 +9287,7 @@
    "id": "adcf1f02",
    "metadata": {},
    "source": [
-    "## Chapter 14 - Building an Inference Pipeline\n",
+    "## Session 14 - Building an Inference Pipeline\n",
     "\n",
     "Deploying the model we trained directly to an endpoint doesn't lets us control the data that goes in and comes out of the endpoint. The TensorFlow model we trained requires transformed data, which makes it useless to other applications:\n",
     "\n",
@@ -10049,8 +10074,8 @@
     "# | code: true\n",
     "# | output: false\n",
     "\n",
-    "chapter14_pipeline = Pipeline(\n",
-    "    name=\"chapter14-pipeline\",\n",
+    "session14_pipeline = Pipeline(\n",
+    "    name=\"session14-pipeline\",\n",
     "    parameters=[dataset_location, accuracy_threshold],\n",
     "    steps=[\n",
     "        preprocessing_step,\n",
@@ -10062,7 +10087,7 @@
     "    sagemaker_session=config[\"session\"],\n",
     ")\n",
     "\n",
-    "chapter14_pipeline.upsert(role_arn=role)"
+    "session14_pipeline.upsert(role_arn=role)"
    ]
   },
   {
@@ -10215,7 +10240,7 @@
    "id": "a1c7a3a1",
    "metadata": {},
    "source": [
-    "## Chapter 15 - Data Quality Baseline\n",
+    "## Session 15 - Data Quality Baseline\n",
     "\n",
     "In this section, we'll extend the [SageMaker Pipeline](https://docs.aws.amazon.com/sagemaker/latest/dg/pipelines-sdk.html) with a [Quality Check Step](https://docs.aws.amazon.com/sagemaker/latest/dg/build-and-manage-steps.html#step-type-quality-check) to compute a baseline for the data the endpoint expects. This step will compute statistics and constraints from the data. We will later use this information as the standard to detect data drift and other data quality issues. \n",
     "\n",
@@ -10477,8 +10502,8 @@
     "# | code: true\n",
     "# | output: false\n",
     "\n",
-    "chapter15_pipeline = Pipeline(\n",
-    "    name=\"chapter15-pipeline\",\n",
+    "session15_pipeline = Pipeline(\n",
+    "    name=\"session15-pipeline\",\n",
     "    parameters=[dataset_location, accuracy_threshold],\n",
     "    steps=[\n",
     "        preprocessing_step,\n",
@@ -10491,7 +10516,7 @@
     "    sagemaker_session=config[\"session\"],\n",
     ")\n",
     "\n",
-    "chapter15_pipeline.upsert(role_arn=role)"
+    "session15_pipeline.upsert(role_arn=role)"
    ]
   },
   {
@@ -10671,7 +10696,7 @@
    "id": "9631cf7b",
    "metadata": {},
    "source": [
-    "## Chapter 16 - Model Quality Baseline\n",
+    "## Session 16 - Model Quality Baseline\n",
     "\n",
     "In this section, we'll extend the [SageMaker Pipeline](https://docs.aws.amazon.com/sagemaker/latest/dg/pipelines-sdk.html) with a [Quality Check Step](https://docs.aws.amazon.com/sagemaker/latest/dg/build-and-manage-steps.html#step-type-quality-check) to compute a baseline for the model performance. This step will compute the baseline metrics we will later use as the standard to detect model drift. \n",
     "\n",
@@ -11051,8 +11076,8 @@
     "# | code: true\n",
     "# | output: false\n",
     "\n",
-    "chapter16_pipeline = Pipeline(\n",
-    "    name=\"chapter16-pipeline\",\n",
+    "session16_pipeline = Pipeline(\n",
+    "    name=\"session16-pipeline\",\n",
     "    parameters=[dataset_location, accuracy_threshold],\n",
     "    steps=[\n",
     "        preprocessing_step,\n",
@@ -11065,7 +11090,7 @@
     "    sagemaker_session=config[\"session\"],\n",
     ")\n",
     "\n",
-    "chapter16_pipeline.upsert(role_arn=role)"
+    "session16_pipeline.upsert(role_arn=role)"
    ]
   },
   {
@@ -11133,7 +11158,7 @@
    "id": "1dd9b8b7",
    "metadata": {},
    "source": [
-    "## Chapter 17 - Data Monitoring\n",
+    "## Session 17 - Data Monitoring\n",
     "\n",
     "In this section, we'll setup a monitoring job to monitor the quality of the data received by the endpoint. This schedule will run periodically and check the data that goes into the endpoint against the baseline we generated before.\n",
     "\n",
@@ -11580,7 +11605,7 @@
    "id": "a4ec9a8b",
    "metadata": {},
    "source": [
-    "## Chapter 18 - Model Monitoring\n",
+    "## Session 18 - Model Monitoring\n",
     "\n",
     "In this section, we'll setup a monitoring job to monitor the quality of the model outputs. This schedule will run periodically and check the data that goes into the endpoint against the baseline we generated before.\n",
     "\n",
@@ -12444,12 +12469,12 @@
     }
    ],
    "source": [
-    "# %%script false --no-raise-error\n",
+    "%%script false --no-raise-error\n",
     "#| eval: false\n",
     "#| code: true\n",
     "#| output: false\n",
     "\n",
-    "chapter5_pipeline.start()"
+    "session1_pipeline.start()"
    ]
   },
   {
