--- a/program/cohort.ipynb
+++ b/program/cohort.ipynb
@@ -41,19 +41,26 @@
     "\n",
     "Throughout the sessions, we'll build each of these pipelines. We'll also build variations to show you different alternatives and best practices.\n",
     "\n",
-    ":::{.callout-note}\n",
-    "Before running this notebook, follow the [Setup Instructions](https://program.ml.school/setup.html) for the program.\n",
-    ":::\n",
-    "\n",
     "Let's start by setting up the environment and preparing to run the notebook.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "4b2265b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "The dotenv extension is already loaded. To reload it, use:\n",
+      "  %reload_ext dotenv\n"
+     ]
+    }
+   ],
    "source": [
     "#| hide\n",
     "\n",
@@ -95,12 +102,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "id": "32c4d764",
    "metadata": {},
    "outputs": [],
    "source": [
-    "LOCAL_MODE = True"
+    "LOCAL_MODE = False"
    ]
   },
   {
@@ -113,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "id": "3164a3af",
    "metadata": {},
    "outputs": [],
@@ -137,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "id": "7bc40d28",
    "metadata": {},
    "outputs": [],
@@ -159,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "id": "3b3f17e5",
    "metadata": {},
    "outputs": [],
@@ -202,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "id": "942a01b5",
    "metadata": {},
    "outputs": [],
@@ -231,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "id": "f1cd2f0e-446d-48a9-a008-b4f1cc593bfc",
    "metadata": {
     "tags": []
@@ -338,7 +345,7 @@
        "4       3450.0  FEMALE  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "id": "f2107c25-e730-4e22-a1b8-5bda53e61124",
    "metadata": {
     "tags": []
@@ -554,7 +561,7 @@
        "max     6300.000000   NaN  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "id": "1242122a-726e-4c37-a718-dd8e873d1612",
    "metadata": {
     "tags": []
@@ -631,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "id": "cf1cf582-8831-4f83-bb17-2175afb193e8",
    "metadata": {
     "tags": []
@@ -646,7 +653,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "id": "cc42cb08-275c-4b05-9d2b-77052da2f336",
    "metadata": {
     "tags": []
@@ -686,7 +693,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "id": "3c57d55d-afd6-467a-a7a8-ff04132770ed",
    "metadata": {
     "tags": []
@@ -724,7 +731,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "id": "2852c740",
    "metadata": {},
    "outputs": [
@@ -793,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "id": "707cc972",
    "metadata": {},
    "outputs": [
@@ -841,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "id": "3daf3ba1-d218-4ad4-b862-af679b91273f",
    "metadata": {
     "tags": []
@@ -921,7 +928,7 @@
        "body_mass_g        640316.716388  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "id": "1d793e09-2cb9-47ff-a0e6-199a0f4fc1b3",
    "metadata": {
     "tags": []
@@ -1026,7 +1033,7 @@
        "body_mass_g           1.000000  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1051,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "id": "1258c99d",
    "metadata": {},
    "outputs": [
@@ -1091,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
    "id": "45b0a87f-028d-477f-9b65-199728c0b7ee",
    "metadata": {
     "tags": []
@@ -1153,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "id": "78fe069e",
    "metadata": {},
    "outputs": [],
@@ -1171,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "id": "fb6ba7c0-1bd6-4fe5-8b7f-f6cbdfd3846c",
    "metadata": {
     "tags": []
@@ -1396,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 50,
    "id": "d1f122a4-acff-4687-91b9-bfef13567d88",
    "metadata": {
     "tags": []
@@ -1407,7 +1414,7 @@
      "output_type": "stream",
      "text": [
       "\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\n",
-      "\u001b[32m\u001b[32m\u001b[1m8 passed\u001b[0m\u001b[32m in 0.14s\u001b[0m\u001b[0m\n"
+      "\u001b[32m\u001b[32m\u001b[1m8 passed\u001b[0m\u001b[32m in 0.13s\u001b[0m\u001b[0m\n"
      ]
     }
    ],
@@ -1525,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 51,
    "id": "d88e9ccf",
    "metadata": {},
    "outputs": [],
@@ -1547,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 52,
    "id": "331fe373",
    "metadata": {},
    "outputs": [],
@@ -1576,17 +1583,25 @@
     "\n",
     "SageMaker manages the infrastructure of a Processing Job. It provisions resources for the duration of the job, and cleans up when it completes. The Processing Container image that SageMaker uses to run a Processing Job can either be a SageMaker built-in image or a custom image:\n",
     "\n",
-    "<a href=\"images/processing-job.png\" target=\"_blank\"> <img src=\"images/processing-job.png\" alt=\"High-level overview of a SageMaker Processing Job\" style=\"max-width: 1024px;\" /></a>\n",
+    "<a href=\"images/processing-job.png\" target=\"_blank\"> <img src=\"images/processing-job.png\" alt=\"High-level overview of a SageMaker Processing Job\" style=\"max-width: 740px;\" /></a>\n",
     "\n",
     "The [Data Processing with Framework Processors](https://docs.aws.amazon.com/sagemaker/latest/dg/processing-job-frameworks.html) page discusses other built-in processors you can use. The [Docker Registry Paths and Example Code](https://docs.aws.amazon.com/sagemaker/latest/dg/sagemaker-algo-docker-registry-paths.html) page contains information about the available framework versions for each region."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 53,
    "id": "3aa4471a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:sagemaker.image_uris:Defaulting to only available Python version: py3\n"
+     ]
+    }
+   ],
    "source": [
     "#| code: true\n",
     "#| output: false\n",
@@ -1618,7 +1633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 54,
    "id": "cdbd9303",
    "metadata": {
     "tags": []
@@ -1699,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 55,
    "id": "e140642a",
    "metadata": {
     "tags": []
@@ -1709,16 +1724,16 @@
      "data": {
       "text/plain": [
        "{'PipelineArn': 'arn:aws:sagemaker:us-east-1:325223348818:pipeline/session3-pipeline',\n",
-       " 'ResponseMetadata': {'RequestId': '7cec2879-ffa1-48e0-b0d0-cb4aa42e0cb5',\n",
+       " 'ResponseMetadata': {'RequestId': '8b192ec2-a025-41a2-9023-bec80fb3a19d',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': '7cec2879-ffa1-48e0-b0d0-cb4aa42e0cb5',\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': '8b192ec2-a025-41a2-9023-bec80fb3a19d',\n",
        "   'content-type': 'application/x-amz-json-1.1',\n",
        "   'content-length': '85',\n",
-       "   'date': 'Sat, 16 Mar 2024 14:24:45 GMT'},\n",
+       "   'date': 'Mon, 25 Mar 2024 18:00:56 GMT'},\n",
        "  'RetryAttempts': 0}}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9097,24 +9112,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "id": "2ee1ce12",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ClientError",
-     "evalue": "An error occurred (ValidationException) when calling the DeleteEndpoint operation: Could not find endpoint \"shadow-penguins-endpoint\".",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mClientError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[158], line 7\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# try:\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m#     predictor = Predictor(endpoint_name=ENDPOINT)\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m#     predictor.delete_endpoint()\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# except Exception as e:\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m#     print(e)\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m \u001b[43msagemaker_client\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdelete_endpoint\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[43m    \u001b[49m\u001b[43mEndpointName\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mSHADOW_DEPLOYMENT_ENDPOINT\u001b[49m\n\u001b[1;32m      9\u001b[0m \u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/dev/ml.school/.venv/lib/python3.9/site-packages/botocore/client.py:553\u001b[0m, in \u001b[0;36mClientCreator._create_api_method.<locals>._api_call\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    549\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\n\u001b[1;32m    550\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpy_operation_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m() only accepts keyword arguments.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    551\u001b[0m     )\n\u001b[1;32m    552\u001b[0m \u001b[38;5;66;03m# The \"self\" in this scope is referring to the BaseClient.\u001b[39;00m\n\u001b[0;32m--> 553\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_make_api_call\u001b[49m\u001b[43m(\u001b[49m\u001b[43moperation_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/dev/ml.school/.venv/lib/python3.9/site-packages/botocore/client.py:1009\u001b[0m, in \u001b[0;36mBaseClient._make_api_call\u001b[0;34m(self, operation_name, api_params)\u001b[0m\n\u001b[1;32m   1005\u001b[0m     error_code \u001b[38;5;241m=\u001b[39m error_info\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mQueryErrorCode\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m error_info\u001b[38;5;241m.\u001b[39mget(\n\u001b[1;32m   1006\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCode\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1007\u001b[0m     )\n\u001b[1;32m   1008\u001b[0m     error_class \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mexceptions\u001b[38;5;241m.\u001b[39mfrom_code(error_code)\n\u001b[0;32m-> 1009\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m error_class(parsed_response, operation_name)\n\u001b[1;32m   1010\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   1011\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m parsed_response\n",
-      "\u001b[0;31mClientError\u001b[0m: An error occurred (ValidationException) when calling the DeleteEndpoint operation: Could not find endpoint \"shadow-penguins-endpoint\"."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    sagemaker_client.delete_endpoint(EndpointName=SHADOW_DEPLOYMENT_ENDPOINT)\n",
@@ -9146,28 +9147,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 56,
    "id": "59d1e634",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "_PipelineExecution(arn='arn:aws:sagemaker:us-east-1:325223348818:pipeline/session15-pipeline/execution/r42fv62sbr2n', sagemaker_session=<sagemaker.workflow.pipeline_context.PipelineSession object at 0x109d72a60>)"
+       "_PipelineExecution(arn='arn:aws:sagemaker:us-east-1:325223348818:pipeline/session3-pipeline/execution/stn5ck0rovng', sagemaker_session=<sagemaker.workflow.pipeline_context.PipelineSession object at 0x2d52fbf70>)"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%script false --no-raise-error\n",
+    "# %%script false --no-raise-error\n",
     "#| eval: false\n",
     "#| code: true\n",
     "#| output: false\n",
     "\n",
-    "session15_pipeline.start()"
+    "session3_pipeline.start()"
    ]
   },
   {
